--- a/DyA.css
+++ b/DyA.css
@@ -6,24 +6,26 @@ overflow: hidden;
 .super {
     margin: 2% auto;
     padding: 20px;
-    display: inline-flex;
+    
     align-content:space-between;
     vertical-align: middle;
-    width: 100%;
     background-color: whitesmoke;
     align-self: center;
     box-sizing: border-box;
+    overflow: auto;
 }
 
 h3 {
     font-family: "Amatic SC", sans-serif; 
 }
 #navega {
-    background-image: url(5c84ee193540ea0b4db0b83d04043915.jpg);
+    background-image: url(fondo.jpg);
+    background-repeat: repeat-x;
     font-family: "Amatic SC", sans-serif;
     font-size: 150%;
     font-weight: 700;
     width: 100%;
+    height: auto;
 }
 #bot1 {
     color: black;
