--- a/DyA.css
+++ b/DyA.css
@@ -144,9 +144,25 @@ img {
     #mapa {
         width: 100%;
     }
+    .super {margin: 2% auto;
+        padding: 20px;
+        align-content:space-between;
+        vertical-align: middle;
+        background-color: whitesmoke;
+        align-self: center;
+        box-sizing: border-box;
+        overflow: auto;}
 }
 @media screen and (max-width:400px) {
     .contenedor {
         width: 100%;
     }
+    .super {margin: 2% auto;
+        padding: 20px;
+        align-content:space-between;
+        vertical-align: middle;
+        background-color: whitesmoke;
+        align-self: center;
+        box-sizing: border-box;
+        overflow: auto;}
 }
