--- a/DyA.css
+++ b/DyA.css
@@ -144,11 +144,11 @@ img {
     #mapa {
         width: 100%;
     }
-    .super { display: none;}
+    .super { display:unset;}
 }
 @media screen and (max-width:400px) {
     .contenedor {
         width: 100%;
     }
-    .super { display: none;}
+    .super { display: unset;}
 }
