--- a/DyA.css
+++ b/DyA.css
@@ -13,6 +13,7 @@ overflow: hidden;
     box-sizing: border-box;
     overflow: auto;
     display: inline-flex;
+    width: 100%;
 }
 
 h3 {
@@ -101,6 +102,7 @@ h3 {
 }
 .inicio {
     width: 50%;
+    margin-top: 7%;
 }
 #texto h5{
     width: 65%;
@@ -112,7 +114,6 @@ h3 {
 .card-body{
     vertical-align: middle;
     height: min-content;
-    text-align: left;
 }
 .card-body p{
     font-size: 100%;
@@ -125,12 +126,15 @@ h3 {
 }
 #tarjeta {
 
-    margin-left: 10%;
+    margin-left: 20%;
+    width: 90%;
+
     
 }
+
 img {
-    height: auto;
-    width:100%;
+    height: 50%;
+    width:auto;
 }
 @media screen and (max-width:800px) {
     .inicio {
