--- a/DyA.css
+++ b/DyA.css
@@ -29,18 +29,18 @@ h3 {
     font-family: "Delius Unicase", cursive;
 }
 #bot1 {
-    color: black;
-    width: 100%;
+    color: #000000;
+    width: 90%;
 }
 #bot2 {
     color: whitesmoke;
     background-color: #134f5c;
-    width: 110%;
+    width: 100%;
 }
 #bot3 {
     color:whitesmoke;
     background-color:#134f5c;
-    width: 20%;
+    width: 15%;
 }
 .esta{
     vertical-align: middle;
@@ -97,7 +97,7 @@ h3 {
 .botones{
     vertical-align: middle;
     text-align: center;
-    width: 95%;
+    width: 50%;
     font-family: "Montserrat", sans-serif;
 }
 .inicio {
