--- a/DyA.css
+++ b/DyA.css
@@ -8,7 +8,7 @@ overflow: hidden;
     padding: 20px;
     align-content:space-between;
     vertical-align: middle;
-    background-color: whitesmoke;
+    background-color:whitesmoke;
     align-self: center;
     box-sizing: border-box;
     overflow: auto;
@@ -20,7 +20,7 @@ h3 {
     font-family: "Delius Unicase", cursive;
 }
 #navega {
-    background-image: url(fondo.jpg);
+    background-image: url(cabezalweb.jpg);
     background-repeat: repeat-x;
     font-size: 100%;
     font-weight: 100;
@@ -31,16 +31,18 @@ h3 {
 #bot1 {
     color: #000000;
     width: 100%;
-}
+    
+    }
 #bot2 {
     color: whitesmoke;
     background-color: #134f5c;
     width: 100%;
+    border-color:#134f5c ;
 }
 #bot3 {
     color:whitesmoke;
     background-color:#134f5c;
-    width: 15%;
+    width: 25%;
 }
 .esta{
     vertical-align: middle;
@@ -61,9 +63,12 @@ h3 {
     justify-content: center;
     text-align: center;
     width: 100%;
-    font-family: "Delius Unicase", cursive;;
+    font-family: "Delius Unicase", cursive;
     font-size: 300%;
     vertical-align: middle;
+}
+.asistencia{
+    font-family: "Delius Unicase", cursive;
 }
 #carrousel{
     width: 50%;
@@ -135,6 +140,11 @@ h3 {
 img {
     height: 50%;
     width:auto;
+}
+.regalo{
+    
+    width: 100%;
+    text-align: center;
 }
 @media screen and (max-width:800px) {
     .inicio {
