--- a/DyA.css
+++ b/DyA.css
@@ -20,7 +20,7 @@ h3 {
     font-family: "Delius Unicase", cursive;
 }
 #navega {
-    background-image: url(cabezalweb.jpg);
+    background-image: url(cabezalweb2.jpg);
     background-repeat: repeat-x;
     font-size: 100%;
     font-weight: 100;
